--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Create the debufr.c file
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/debufr.c.in ${CMAKE_CURRENT_BINARY_DIR}/debufr.c @ONLY)
+
 list(APPEND _utils_srcs
   binv.f
   cmpbqm.f
@@ -20,11 +23,11 @@ endforeach()
 # the debufr utility uses the "8_DA" (8-byte integer, 8-byte real, dynamic allocation)
 # build of the library
 set(_exec debufr.x)
-add_executable(${_exec} debufr.c debufr.f)
+add_executable(${_exec} ${CMAKE_CURRENT_BINARY_DIR}/debufr.c debufr.f)
 add_dependencies(${_exec} bufr::bufr_8_DA)
-set_property(SOURCE debufr.c APPEND_STRING PROPERTY COMPILE_DEFINITIONS
-                                                    "${underscore_def}"
-                                                    "${c_8_DA_defs}")
+set_property(SOURCE ${CMAKE_CURRENT_BINARY_DIR}/debufr.c APPEND_STRING PROPERTY COMPILE_DEFINITIONS
+                                                                                "${underscore_def}"
+                                                                                "${c_8_DA_defs}")
 set_property(SOURCE debufr.f APPEND_STRING PROPERTY COMPILE_FLAGS
                                                     "${fortran_8_DA_flags}")
 target_include_directories(${_exec} PRIVATE "${PROJECT_BINARY_DIR}/src")
