--- a/src/bfrini.f90.in
+++ b/src/bfrini.f90.in
@@ -54,261 +54,253 @@
 !> - 2021-03-23  J. Ator    -- Use mtinfo() with MASTER_TABLE_DIR
 !>                             macro from CMake
 !>
-      SUBROUTINE BFRINI
+subroutine bfrini
 
-      USE MODA_STBFR
-      USE MODA_IDRDM
-      USE MODA_MSGLIM
-      USE MODA_BITBUF
-      USE MODA_BUFRMG
-      USE MODA_BUFRSR
-      USE MODA_TABABD
-      USE MODA_USRINT
-      USE MODA_TABLES
-      USE MODA_H4WLC
-      USE MODA_DSCACH
+USE MODA_STBFR
+USE MODA_IDRDM
+USE MODA_MSGLIM
+USE MODA_BITBUF
+USE MODA_BUFRMG
+USE MODA_BUFRSR
+USE MODA_TABABD
+USE MODA_USRINT
+USE MODA_TABLES
+USE MODA_H4WLC
+USE MODA_DSCACH
 
-      COMMON /MAXCMP/ MAXCMB,MAXROW,MAXCOL,NCMSGS,NCSUBS,NCBYTS
-      COMMON /PADESC/ IBCT,IPD1,IPD2,IPD3,IPD4
-      COMMON /REPTAB/ IDNR(5,2),TYPS(5,2),REPS(5,2),LENS(5)
-      COMMON /DXTAB / MAXDX,IDXV,NXSTR(10),LDXA(10),LDXB(10),LDXD(10), &
-                      LD30(10),DXSTR(10)
-      COMMON /MRGCOM/ NRPL,NMRG,NAMB,NTOT
-      COMMON /DATELN/ LENDAT
-      COMMON /ACMODE/ IAC
-      COMMON /MSGSTD/ CSMF
-      COMMON /MSGCMP/ CCMF
-      COMMON /TABLEF/ CDMF
-      COMMON /TNKRCP/ ITRYR,ITRMO,ITRDY,ITRHR,ITRMI,CTRT
-      COMMON /ENDORD/ IBLOCK,IORDBE(4),IORDLE(4)
-      COMMON /BUFRBMISS/ BMISS
+COMMON /MAXCMP/ MAXCMB,MAXROW,MAXCOL,NCMSGS,NCSUBS,NCBYTS
+COMMON /PADESC/ IBCT,IPD1,IPD2,IPD3,IPD4
+COMMON /REPTAB/ IDNR(5,2),TYPS(5,2),REPS(5,2),LENS(5)
+COMMON /DXTAB / MAXDX,IDXV,NXSTR(10),LDXA(10),LDXB(10),LDXD(10), &
+                LD30(10),DXSTR(10)
+COMMON /MRGCOM/ NRPL,NMRG,NAMB,NTOT
+COMMON /DATELN/ LENDAT
+COMMON /ACMODE/ IAC
+COMMON /MSGSTD/ CSMF
+COMMON /MSGCMP/ CCMF
+COMMON /TABLEF/ CDMF
+COMMON /TNKRCP/ ITRYR,ITRMO,ITRDY,ITRHR,ITRMI,CTRT
+COMMON /ENDORD/ IBLOCK,IORDBE(4),IORDLE(4)
 
-      REAL*8  BMISS
-      CHARACTER*100 CMTDIR
-      CHARACTER*56  DXSTR
-      CHARACTER*6   ADSN(5,2),DNDX(25,10)
-      CHARACTER*3   TYPX(5,2),TYPS
-      CHARACTER*1   REPX(5,2),REPS
-      CHARACTER*1   CSMF
-      CHARACTER*1   CCMF
-      CHARACTER*1   CDMF
-      CHARACTER*1   CTRT
-      DIMENSION     NDNDX(10),NLDXA(10),NLDXB(10),NLDXD(10),NLD30(10)
-      DIMENSION     LENX(5)
+character*100 CMTDIR
+character*56  DXSTR
+character*6   ADSN(5,2),DNDX(25,10)
+character*3   TYPX(5,2),TYPS
+character*1   REPX(5,2),REPS
+character*1   CSMF
+character*1   CCMF
+character*1   CDMF
+character*1   CTRT
+dimension     NDNDX(10),NLDXA(10),NLDXB(10),NLDXD(10),NLD30(10)
+dimension     LENX(5)
 
-      DATA ADSN   / '101000','360001','360002','360003','360004' , &
-                    '101255','031002','031001','031001','031000' /
-      DATA TYPX   /    'REP',   'DRP',   'DRP',   'DRS' ,  'DRB' , &
-                       'SEQ',   'RPC',   'RPC',   'RPS' ,  'SEQ' /
-      DATA REPX   /      '"',     '(',     '{',     '[' ,    '<' , &
-                         '"',     ')',     '}',     ']' ,    '>' /
-      DATA LENX   /       0 ,     16 ,      8 ,      8  ,     1  /
+data ADSN   / '101000','360001','360002','360003','360004' , &
+              '101255','031002','031001','031001','031000' /
+data TYPX   /    'REP',   'DRP',   'DRP',   'DRS' ,  'DRB' , &
+                 'SEQ',   'RPC',   'RPC',   'RPS' ,  'SEQ' /
+data REPX   /      '"',     '(',     '{',     '[' ,    '<' , &
+                   '"',     ')',     '}',     ']' ,    '>' /
+data LENX   /       0 ,     16 ,      8 ,      8  ,     1  /
 
-      DATA (DNDX(I,1),I=1,25)/ &
-      '102000','031001','000001','000002', &
-      '110000','031001','000010','000011','000012','000013','000015', &
-                        '000016','000017','000018','000019','000020', &
-      '107000','031001','000010','000011','000012','000013','101000', &
-                        '031001','000030'/
+data (DNDX(I,1),I=1,25)/ &
+'102000','031001','000001','000002', &
+'110000','031001','000010','000011','000012','000013','000015', &
+                  '000016','000017','000018','000019','000020', &
+'107000','031001','000010','000011','000012','000013','101000', &
+                  '031001','000030'/
 
-      DATA (DNDX(I,2),I=1,15)/ &
-      '103000','031001','000001','000002','000003', &
-      '101000','031001','300004', &
-      '105000','031001','300003','205064','101000','031001','000030'/
+data (DNDX(I,2),I=1,15)/ &
+'103000','031001','000001','000002','000003', &
+'101000','031001','300004', &
+'105000','031001','300003','205064','101000','031001','000030'/
 
-      DATA NDNDX /  25 ,  15 , 8*0 /
-      DATA NLDXA /  35 ,  67 , 8*0 /
-      DATA NLDXB /  80 , 112 , 8*0 /
-      DATA NLDXD /  38 ,  70 , 8*0 /
-      DATA NLD30 /   5 ,   6 , 8*0 /
+data NDNDX /  25 ,  15 , 8*0 /
+data NLDXA /  35 ,  67 , 8*0 /
+data NLDXB /  80 , 112 , 8*0 /
+data NLDXD /  38 ,  70 , 8*0 /
+data NLD30 /   5 ,   6 , 8*0 /
 
 !-----------------------------------------------------------------------
 !-----------------------------------------------------------------------
 
-!  INITIALIZE /ENDORD/ TO CONTROL OUTPUT BLOCKING -1=LE 0=NONE +1=BE
+!  Initialize /ENDORD/ to control output blocking -1=LE 0=NONE +1=BE
 !  -----------------------------------------------------------------
 
-      IBLOCK = 0
+IBLOCK = 0
 
-!  INITIALIZE /BUFRBMISS/
-!  ----------------------
-
-      BMISS = 10E10_8
-
-!  INITIALIZE MODULE BITBUF
+!  Initialize module BITBUF
 !  ------------------------
 
-      MAXBYT = MIN(10000,MXMSGL)
+MAXBYT = min(10000,MXMSGL)
 
-!  INITIALIZE MODULE H4WLC
+!  Initialize module H4WLC
 !  -----------------------
 
-      NH4WLC = 0
+NH4WLC = 0
 
-!  INITIALIZE /MAXCMP/
+!  Initialize /MAXCMP/
 !  -------------------
 
-      MAXCMB = MAXBYT
-      MAXROW = 0
-      MAXCOL = 0
-      NCMSGS = 0
-      NCSUBS = 0
-      NCBYTS = 0
+MAXCMB = MAXBYT
+MAXROW = 0
+MAXCOL = 0
+NCMSGS = 0
+NCSUBS = 0
+NCBYTS = 0
 
-!  INITIALIZE /PADESC/
+!  Initialize /PADESC/
 !  -------------------
 
-      IBCT = IFXY('063000')
-      IPD1 = IFXY('102000')
-      IPD2 = IFXY('031001')
-      IPD3 = IFXY('206001')
-      IPD4 = IFXY('063255')
+IBCT = ifxy('063000')
+IPD1 = ifxy('102000')
+IPD2 = ifxy('031001')
+IPD3 = ifxy('206001')
+IPD4 = ifxy('063255')
 
-!  INITIALIZE MODULE STBFR
+!  Initialize module STBFR
 !  -----------------------
 
-      DO I=1,NFILES
-      IOLUN(I) = 0
-      IOMSG(I) = 0
-      ENDDO
+do I=1,NFILES
+  IOLUN(I) = 0
+  IOMSG(I) = 0
+enddo
 
-!  INITIALIZE MODULE IDRDM
+!  Initialize module IDRDM
 !  -----------------------
 
-      DO I=1,NFILES
-      IDRDM(I) = 0
-      ENDDO
+do I=1,NFILES
+  IDRDM(I) = 0
+enddo
 
-!  INITIALIZE MODULE MSGLIM
+!  Initialize module MSGLIM
 !  ------------------------
 
-      DO I=1,NFILES
-      MSGLIM(I) = 3
-      ENDDO
+do I=1,NFILES
+  MSGLIM(I) = 3
+enddo
 
-!  INITIALIZE MODULE USRINT
+!  Initialize module USRINT
 !  ------------------------
 
-      DO I=1,NFILES
-      NVAL(I) = 0
-      ENDDO
+do I=1,NFILES
+  NVAL(I) = 0
+enddo
 
-!  INITIALIZE /REPTAB/
+!  Initialize /REPTAB/
 !  -------------------
 
-      DO I=1,5
-      LENS(I) = LENX(I)
-      DO J=1,2
-      IDNR(I,J) = IFXY(ADSN(I,J))
-      TYPS(I,J) = TYPX(I,J)
-      REPS(I,J) = REPX(I,J)
-      ENDDO
-      ENDDO
+do I=1,5
+  LENS(I) = LENX(I)
+  do J=1,2
+    IDNR(I,J) = ifxy(ADSN(I,J))
+    TYPS(I,J) = TYPX(I,J)
+    REPS(I,J) = REPX(I,J)
+  enddo
+enddo
 
-!  INITIALIZE TABABD (INTERNAL ARRAYS HOLDING DICTIONARY TABLE)
+!  Initialize TABABD (internal arrays holding dictionary table)
 !  ------------------------------------------------------------
 
 !    NTBA(0) is the maximum number of entries w/i internal BUFR table A
 
-      NTBA(0) = MAXTBA
+NTBA(0) = MAXTBA
 
 !    NTBB(0) is the maximum number of entries w/i internal BUFR Table B
 
-      NTBB(0) = MAXTBB
+NTBB(0) = MAXTBB
 
 !    NTBD(0) is the maximum number of entries w/i internal BUFR Table D
 
-      NTBD(0) = MAXTBD
+NTBD(0) = MAXTBD
 
-!  INITIALIZE /DXTAB/
+!  Initialize /DXTAB/
 !  ------------------
 
-      MAXDX = MAXBYT
+MAXDX = MAXBYT
 !  .... IDXV is the version number of the local tables
-      IDXV  = 1
+IDXV  = 1
 
-      DO J=1,10
-      LDXA(J)  = NLDXA(J)
-      LDXB(J)  = NLDXB(J)
-      LDXD(J)  = NLDXD(J)
-      LD30(J)  = NLD30(J)
-      DXSTR(J) = '      '
-      NXSTR(J) = NDNDX(J)*2
-      DO I=1,NDNDX(J)
-      I1 = I*2-1
-      CALL IPKM(DXSTR(J)(I1:I1),2,IFXY(DNDX(I,J)))
-      ENDDO
-      ENDDO
+do J=1,10
+  LDXA(J)  = NLDXA(J)
+  LDXB(J)  = NLDXB(J)
+  LDXD(J)  = NLDXD(J)
+  LD30(J)  = NLD30(J)
+  DXSTR(J) = '      '
+  NXSTR(J) = NDNDX(J)*2
+  do I=1,NDNDX(J)
+    I1 = I*2-1
+    call ipkm(DXSTR(J)(I1:I1),2,ifxy(DNDX(I,J)))
+  enddo
+enddo
 
-!  INITIALIZE MODULE TABLES
+!  Initialize module TABLES
 !  ------------------------
 
-      MAXTAB = MAXJL
+MAXTAB = MAXJL
 
-!  INITIALIZE MODULE BUFRMG
+!  Initialize module BUFRMG
 !  ------------------------
 
-      DO I=1,NFILES
-      MSGLEN(I) = 0
-      ENDDO
+do I=1,NFILES
+  MSGLEN(I) = 0
+enddo
 
-!  INITIALIZE /MRGCOM/
+!  Initialize /MRGCOM/
 !  -------------------
 
-      NRPL = 0
-      NMRG = 0
-      NAMB = 0
-      NTOT = 0
+NRPL = 0
+NMRG = 0
+NAMB = 0
+NTOT = 0
 
-!  INITIALIZE /DATELN/
+!  Initialize /DATELN/
 !  -------------------
 
-      IF(LENDAT.NE.10) LENDAT = 8
+if(LENDAT.ne.10) LENDAT = 8
 
-!  INITIALIZE /ACMODE/
+!  Initialize /ACMODE/
 !  -------------------
 
-!  .... DK: What does this control??
-      IAC = 0
+IAC = 0
 
-!  INITIALIZE MODULE BUFRSR
+!  Initialize module BUFRSR
 !  ------------------------
 
-      DO I=1,NFILES
-      JSR(I) = 0
-      ENDDO
+do I=1,NFILES
+  JSR(I) = 0
+enddo
 
-!  INITIALIZE /DSCACH/
+!  Initialize /DSCACH/
 !  -------------------
 
-      NCNEM = 0
+NCNEM = 0
 
-!  INITIALIZE /MSGSTD/
+!  Initialize /MSGSTD/
 !  -------------------
 
-      CSMF = 'N'
+CSMF = 'N'
 
-!  INITIALIZE /MSGCMP/
+!  Initialize /MSGCMP/
 !  -------------------
 
-      CCMF = 'N'
+CCMF = 'N'
 
-!  INITIALIZE /TABLEF/
+!  Initialize /TABLEF/
 !  -------------------
 
-      CDMF = 'N'
+CDMF = 'N'
 
-!  INITIALIZE /TNKRCP/
+!  Initialize /TNKRCP/
 !  -------------------
 
-      CTRT = 'N'
+CTRT = 'N'
 
-!  INITIALIZE /MSTINF/
+!  Initialize /MSTINF/
 !  -------------------
 
-      CMTDIR = &
-      '@MASTER_TABLE_DIR@'
-      CALL MTINFO(CMTDIR,98,99)
+CMTDIR = &
+'@MASTER_TABLE_DIR@'
+call mtinfo(CMTDIR,98,99)
 
-      RETURN
-      END
+return
+end
