--- a/.github/workflows/main_new.yml
+++ b/.github/workflows/main_new.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         os: [macos-10.15,  ubuntu-20.04]
@@ -21,7 +21,6 @@ jobs:
 
     - name: install-deps
       run: |
-        if [[ ${{ matrix.os }} == "ubuntu-20.04" ]]; then
           sudo apt-get update
           sudo apt-get install doxygen
           sudo apt-get install python3-pip python3-dev python3-numpy
@@ -30,18 +29,6 @@ jobs:
           sudo python3 -m pip install -U netCDF4
           sudo python3 -m pip install -U pdoc
           sudo python3 -m pip install -U gcovr
-        elif [[ ${{ matrix.os }} == "macos-10.15" ]]; then
-          brew update
-          brew install doxygen
-          pip3 install setuptools
-          pip3 install numpy
-          pip3 install netCDF4
-          if [[ ${{ matrix.fcompiler }} == "gfortran-9" ]]; then
-            sudo ln -sf /usr/local/bin/gfortran-9 /usr/local/bin/gfortran
-          elif  [[ ${{ matrix.fcompiler }} == "gfortran-10" ]]; then
-            sudo ln -sf /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
-          fi
-        fi
 
     - name: checkout
       uses: actions/checkout@v2
@@ -66,11 +53,7 @@ jobs:
         cd bufr
         mkdir build
         cd build
-        if [[ ${{ matrix.os }} == "ubuntu-20.04" ]]; then
            cmake -DCMAKE_INSTALL_PREFIX=./install -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0" ..
-        else
-           cmake -DCMAKE_INSTALL_PREFIX=./install ..
-        fi
         make -j2
         make install
 
@@ -78,13 +61,9 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE/bufr/build
         ctest
-        if [[ ${{ matrix.os }} == "ubuntu-20.04" ]]; then
            gcovr -r .. --html-details -o test-coverage.html
-        fi
 
     - uses: actions/upload-artifact@v2
-      if: ${{ matrix.os == 'ubuntu-20.04' }}
-      with:
         name: test-coverage
         path: NCEPLIBS-bufr/build/*.html
       
