--- a/.github/workflows/main_new.yml
+++ b/.github/workflows/main_new.yml
@@ -46,5 +46,5 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: test-coverage
-        path: NCEPLIBS-bufr/build/*.html
+        path: bufr/build/*.html
       
