allow reading of up to 24 characters from master Table B units fields

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,7 @@ foreach(_var IN ITEMS NFILES MAXCD)
     file(STRINGS modv_${_var}.F _${_var}_tempstr REGEX ${VAR_REGEX_${_alloc}})
     if(_${_var}_tempstr MATCHES "${_var} = ([0-9]+)")
       set(${_var}_${_alloc} ${CMAKE_MATCH_1})
-    elseif()
+    else()
       message(FATAL_ERROR "Unable to parse variable ${_var}_${_alloc} value from file: modv_${_var}.F")
     endif()
   endforeach()
@@ -23,7 +23,7 @@ foreach(_var IN ITEMS MAXNC MXNAF)
   file(STRINGS modv_${_var}.f90 _${_var}_tempstr REGEX "parameter,")
   if(_${_var}_tempstr MATCHES "${_var} = ([0-9]+)")
     set(${_var} ${CMAKE_MATCH_1})
-  elseif()
+  else()
     message(FATAL_ERROR "Unable to parse variable ${_var} value from file: modv_${_var}.f90")
   endif()
 endforeach()
