--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -9,6 +9,8 @@ list(APPEND _utils_srcs
   sinv.f
   gettab.f90
   split_by_subset.f90
+  print_subsets.f90
+  print_queries.f90
 )
 
 foreach(_src ${_utils_srcs})
