Add --output-on-failure to ctest

--- a/.github/workflows/main_new.yml
+++ b/.github/workflows/main_new.yml
@@ -40,7 +40,7 @@ jobs:
     - name: test
       run: |
         cd $GITHUB_WORKSPACE/bufr/build
-        ctest
+        ctest --output-on-failure
         gcovr -r .. --html-details -o test-coverage.html
 
     - uses: actions/upload-artifact@v2
