--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,7 +27,7 @@ if(NOT EXISTS "${CMAKE_CURRENT_BINARY_DIR}/${BUFR_TAR}")
   
 endif()
 
-add_custom_target(get_bufr_test_data ALL DEPENDS ${BUFR_TAR})
+add_custom_target(get_bufr_test_data ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${BUFR_TAR})
 add_custom_command(
   TARGET get_bufr_test_data
   POST_BUILD
