--- a/src/bufrlib.h.in
+++ b/src/bufrlib.h.in
@@ -40,9 +40,12 @@
 #define bort_exit  bort_exit_
 #define bvers      bvers_
 #define cadn30	   cadn30_
+#define closbf     closbf_
 #define cmpia	   cmpia_
+#define cmpmsg     cmpmsg_
 #define elemdx	   elemdx_
 #define gets1loc   gets1loc_
+#define ibfms      ibfms_
 #define ichkstr	   ichkstr_
 #define icvidx	   icvidx_
 #define ifxy	   ifxy_
@@ -51,18 +54,23 @@
 #define igettdi	   igettdi_
 #define imrkopr	   imrkopr_
 #define ipkm	   ipkm_
+#define ireadns    ireadns_
 #define istdesc	   istdesc_
 #define iupbs01	   iupbs01_
 #define iupm	   iupm_
+#define maxout     maxout_
 #define nemtab	   nemtab_
 #define nemtbb	   nemtbb_
 #define nummtb	   nummtb_
 #define numtbd	   numtbd_
+#define openmb     openmb_
 #define pktdd	   pktdd_
 #define restd	   restd_
 #define stntbi	   stntbi_
 #define strnum	   strnum_
 #define stseq	   stseq_
+#define ufbint     ufbint_
+#define ufbseq     ufbseq_
 #define uptdd	   uptdd_
 #define wrdesc	   wrdesc_
 #define wrdlen	   wrdlen_
@@ -83,6 +91,7 @@
 #else
     typedef int f77int;
 #endif
+typedef double f77r8; /* define the C object type that is equivalent to a REAL*8 in Fortran */
 
 /*
 ** Declare prototypes for ANSI C compatibility.  This should be done for any
@@ -92,33 +101,41 @@
 */
 void arallocc( void );
 void ardllocc( void );
-void bort( char *, f77int );
+void bort( char *, size_t );
 void bort_exit( void );
-void bvers( char *, f77int ); 
-void cadn30( f77int *, char *, f77int ); 
+void bvers( char *, size_t ); 
+void cadn30( f77int *, char *, size_t ); 
+void closbf( f77int * );
 int cmpia( const void *, const void * );
-void elemdx( char *, f77int *, f77int );
-void gets1loc( char *, f77int *, f77int *, f77int *, f77int *, f77int );
-f77int ichkstr ( char *, char *, f77int *, f77int, f77int );
+void cmpmsg( char *, size_t );
+void elemdx( char *, f77int *, size_t );
+void gets1loc( char *, f77int *, f77int *, f77int *, f77int *, size_t );
+f77int ibfms( f77r8 * );
+f77int ichkstr ( char *, char *, f77int *, size_t, size_t );
 f77int icvidx ( f77int *, f77int *, f77int * );
-f77int ifxy( char *, f77int );
-f77int igetntbi( f77int *, char *, f77int );
-f77int igetprm( char *, f77int );
+f77int ifxy( char *, size_t );
+f77int igetntbi( f77int *, char *, size_t );
+f77int igetprm( char *, size_t );
 f77int igettdi( f77int * );
-f77int imrkopr( char *, f77int );
-void ipkm( char *, f77int *, f77int *, f77int );
+f77int imrkopr( char *, size_t );
+void ipkm( char *, f77int *, f77int *, size_t );
+f77int ireadns( f77int *, char *, f77int *, size_t );
 f77int istdesc( f77int * );
-f77int iupbs01 ( f77int *, char *, f77int );
-f77int iupm ( char *, f77int *, f77int );
-void nemtab( f77int *, char *, f77int *, char *, f77int *, f77int, f77int );
-void nemtbb( f77int *, f77int *, char *, f77int *, f77int *, f77int *, f77int );
+f77int iupbs01 ( f77int *, char *, size_t );
+f77int iupm ( char *, f77int *, size_t );
+void maxout( f77int * );
+void nemtab( f77int *, char *, f77int *, char *, f77int *, size_t, size_t );
+void nemtbb( f77int *, f77int *, char *, f77int *, f77int *, f77int *, size_t );
 void nummtb( f77int *, char *, f77int * );
-void numtbd( f77int *, f77int *, char *, char *, f77int *, f77int, f77int );
+void numtbd( f77int *, f77int *, char *, char *, f77int *, size_t, size_t );
+void openmb( f77int *, char *, f77int *, size_t );
 void pktdd( f77int *, f77int *, f77int *, f77int * );
 void restd( f77int *, f77int *, f77int *, f77int * );
-void stntbi( f77int *, f77int *, char *, char *, char *, f77int, f77int, f77int );
-void strnum( char *, f77int *, f77int );
+void stntbi( f77int *, f77int *, char *, char *, char *, size_t, size_t, size_t );
+void strnum( char *, f77int *, size_t );
 void stseq( f77int *, f77int *, f77int *, char *, char *, f77int *, f77int * );
+void ufbint( f77int *, f77r8 *, f77int *, f77int *, f77int *, char *, size_t );
+void ufbseq( f77int *, f77r8 *, f77int *, f77int *, f77int *, char *, size_t );
 void uptdd( f77int *, f77int *, f77int *, f77int * );
 void wrdesc( f77int, f77int *, f77int * );
 void wrdlen( void );
