--- a/utils/debufr.c.in
+++ b/utils/debufr.c.in
@@ -17,7 +17,7 @@
 #endif
 
 void fdebufr( char *, char *, f77int *, char *, char *, char *, char *, char *,
-              f77int, f77int, f77int, f77int, f77int, f77int, f77int );
+              size_t, size_t, size_t, size_t, size_t, size_t, size_t );
 void prtusage( char * );
 
 #define MXFLEN 125
