add xbfmg utility and corresponding tests

--- a/src/bufrlib.h.in
+++ b/src/bufrlib.h.in
@@ -56,6 +56,7 @@
 #define ipkm	   ipkm_
 #define ireadns    ireadns_
 #define istdesc	   istdesc_
+#define iupb       iupb_
 #define iupbs01	   iupbs01_
 #define iupm	   iupm_
 #define maxout     maxout_
@@ -121,6 +122,7 @@ f77int imrkopr( char *, size_t );
 void ipkm( char *, f77int *, f77int *, size_t );
 f77int ireadns( f77int *, char *, f77int *, size_t );
 f77int istdesc( f77int * );
+f77int iupb( f77int *, f77int *, f77int * );
 f77int iupbs01 ( f77int *, char *, size_t );
 f77int iupm ( char *, f77int *, size_t );
 void maxout( f77int * );
