--- a/tables/CMakeLists.txt
+++ b/tables/CMakeLists.txt
@@ -24,6 +24,7 @@ list(APPEND bufr_tables
   bufrtab.CodeFlag_STD_0_34
   bufrtab.CodeFlag_STD_0_35
   bufrtab.CodeFlag_STD_0_36
+  bufrtab.CodeFlag_STD_0_37
   bufrtab.TableB_LOC_0_7_1
   bufrtab.TableB_STD_0_13
   bufrtab.TableB_STD_0_14
@@ -49,6 +50,7 @@ list(APPEND bufr_tables
   bufrtab.TableB_STD_0_34
   bufrtab.TableB_STD_0_35
   bufrtab.TableB_STD_0_36
+  bufrtab.TableB_STD_0_37
   bufrtab.TableD_LOC_0_7_1
   bufrtab.TableD_STD_0_13
   bufrtab.TableD_STD_0_14
@@ -74,6 +76,7 @@ list(APPEND bufr_tables
   bufrtab.TableD_STD_0_34
   bufrtab.TableD_STD_0_35
   bufrtab.TableD_STD_0_36
+  bufrtab.TableD_STD_0_37
 )
 
 # Link BUFR tables in the build area
